@@ -44,7 +44,7 @@ deprecated, as it has been superseded by pcre_fullinfo(). */
 
 
 #ifdef HAVE_CONFIG_H
-#include <config.h>
+#include "config.h"
 #endif
 
 #include "pcre_internal.h"
