@@ -44,7 +44,7 @@ auxiliary local function to flip the appropriate bytes. */
 
 
 #ifdef HAVE_CONFIG_H
-#include <config.h>
+#include "config.h"
 #endif
 
 #include "pcre_internal.h"
